Added Payment Page

--- a/HealthInsurenceSystem/Views/Person/signup.cshtml
+++ b/HealthInsurenceSystem/Views/Person/signup.cshtml
@@ -33,7 +33,7 @@
                         <label asp-for="Dob"> Date of Birth </label>
                     </div>
                     <div class="col-8">
-                        <input asp-for="Dob" class="form-control" />
+                        <input asp-for="Dob" type="date" class="form-control" />
                         <span asp-validation-for="Dob" class="text-danger"></span>
                     </div>
 
