--- a/HealthInsurenceSystem/Views/Shared/_Layout.cshtml
+++ b/HealthInsurenceSystem/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -22,8 +24,22 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="login">Log In</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Payment" asp-action="Index">Quick Payment</a>
                         </li>
+                        @if (Context.Session.GetInt32("loggedIn") != 1)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="login">Log In</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">log out</a>
+                            </li>
+                        }
+
+
                     </ul>
                 </div>
             </div>
