--- a/HealthInsurenceSystem/Views/Payment/PaymentPage.cshtml
+++ b/HealthInsurenceSystem/Views/Payment/PaymentPage.cshtml
@@ -1,7 +1,4 @@
-﻿@using HealthInsurenceSystem.Models
-
-@model  IEnumerable<HealthInsurenceSystem.Models.Customer>
- 
+﻿@model HealthInsurenceSystem.Models.Payment
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -24,30 +21,66 @@
         padding-left: 0px;
     }
 </style>
+<script type="text/javascript">
+    function validate() {
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-md-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        Payment Details
-                    </h3>
-                    <div class="checkbox pull-right">
-                        <label>
-                            <input type="checkbox" />
-                            Remember
-                        </label>
+        var myTextField = document.getElementById('cardNumber').value;
+
+        if (document.getElementById('Visa').checked) {
+            if (myTextField[0] != 4) {
+                alert("Please Enter correct Card Number ");
+            }
+        } else if (document.getElementById('Master').checked) {
+            if (myTextField[0] != 5) {
+                alert("Please Enter correct Card Number ");
+            }
+        }
+        if (document.getElementById('expityMonth').value > 13) {
+            alert("Please Enter correct Month Value ");
+        }
+        if (document.getElementById('expityYear').value < 2020 && document.getElementById('expityYear').value > 2040) {
+            alert("Please Enter correct Month Value ");
+        }
+        if (document.getElementById('cvCode').value < 100 && document.getElementById('cvCode').value > 1000) {
+            alert("Please Enter correct CV number ");
+        }
+        check();
+        return true;
+    }
+</script>
+
+
+<form method="post" asp-action="check">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">
+                            Payment Details
+                        </h3>
+                        <div class="checkbox pull-right">
+                            <label>
+                                <input type="checkbox" />
+                                Remember
+                            </label>
+                        </div>
+
                     </div>
-                </div>
-                <div class="panel-body">
-                    <form role="form">
+
+
+                    <div class="panel-body">
+                        <input type="radio" id="Visa" name="type" value="Visa">
+                        <label for="Visa">Visa</label><br>
+                        <input type="radio" id="Master" name="type" value="Master">
+                        <label for="Master">Master</label><br>
+
                         <div class="form-group">
                             <label for="cardNumber">
                                 CARD NUMBER
                             </label>
                             <div class="input-group">
-                                <input type="text" class="form-control" id="cardNumber" placeholder="Valid Card Number"
+                                <input asp-for="Cardnumber" type="text" class="form-control" id="cardNumber" placeholder="Valid Card Number"
                                        required autofocus />
                                 <span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
                             </div>
@@ -58,38 +91,35 @@
                                     <label for="expityMonth">
                                         EXPIRY DATE
                                     </label>
-                                    <div class="col-xs-6 col-lg-6 pl-ziro">
-                                        <input type="text" class="form-control" id="expityMonth" placeholder="MM" required />
-                                    </div>
-                                    <div class="col-xs-6 col-lg-6 pl-ziro">
-                                        <input type="text" class="form-control" id="expityYear" placeholder="YY" required />
+                                    <div class="col-xs-6 col-lg-6">
+                                        <input asp-for="ExpiredDate" type="text" class="form-control" id="expityMonth" placeholder="MM/YY" required />
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xs-5 col-md-5 pull-right">
                                 <div class="form-group">
                                     <label for="cvCode">
-                                        CV CODE
+                                        CVV CODE
                                     </label>
-                                    <input type="password" class="form-control" id="cvCode" placeholder="CV" required />
+                                    <input asp-for="Cvv" type="password" class="form-control" id="cvCode" placeholder="CV" required />
                                 </div>
                             </div>
                         </div>
-                    </form>
+                    </div>
                 </div>
+                <ul class="nav nav-pills nav-stacked">
+                    <li class="active">
+                        <a href="#">
+                            <span class="badge pull-right">
+                                <span class="glyphicon glyphicon-usd">@TempData["data"]</span>
+                            </span> Final Payment is
+                        </a>
+
+                    </li>
+                </ul>
+                <br />
+                <input type="submit" value='Submit' class="btn btn-success btn-lg btn-block" />
             </div>
-            <ul class="nav nav-pills nav-stacked">
-                <li class="active">
-                    <a href="#">
-                        <span class="badge pull-right">
-                            <span class="glyphicon glyphicon-usd">@TempData["data"]</span>
-                        </span> Final Payment is
-                    </a>
-                    
-                </li>
-            </ul>
-            <br />
-            <a href="http://www.jquery2dotnet.com" class="btn btn-success btn-lg btn-block" role="button">Pay</a>
         </div>
     </div>
-</div>
+</form>
