Updated policy details and policy controller page

--- a/HealthInsurenceSystem/HealthInsurenceSystem/Views/Policies/Index.cshtml
+++ b/HealthInsurenceSystem/HealthInsurenceSystem/Views/Policies/Index.cshtml
@@ -48,7 +48,7 @@
                 @foreach(var obj in Model)
                 {
                 <tr>
-                    <td width="50%">@obj.Pnumber</td>
+                    <td width="50%">@obj.Ptype</td>
                     <td width="50%">@obj.MinAge</td>
                     <td width="50%">@obj.MaxAge</td>
                     <td width="50%">@obj.MonthPremium</td>
