--- a/HealthInsurenceSystem/Views/Payment/Index.cshtml
+++ b/HealthInsurenceSystem/Views/Payment/Index.cshtml
@@ -6,7 +6,7 @@
     </strong>
 </h1>
 
-<div class="bg-secondary text-white">
+<div class="list-group-item list-group-item-action list-group-item-secondary">
     
     <form class="form-group" method="post" asp-action="Index">
         <div class="form-group mb-2">
