--- a/HealthInsurenceSystem/Views/Payment/PaymentPage.cshtml
+++ b/HealthInsurenceSystem/Views/Payment/PaymentPage.cshtml
@@ -1,4 +1,6 @@
 ﻿@model HealthInsurenceSystem.Models.Payment
+@using Microsoft.AspNetCore.Http;
+
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -74,13 +76,6 @@
                         <h3 class="panel-title">
                             Payment Details
                         </h3>
-                        <div class="checkbox pull-right">
-                            <label>
-                                <input type="checkbox" />
-                                Remember
-                            </label>
-                        </div>
-
                     </div>
 
 
@@ -106,7 +101,7 @@
                                     <label for="expityMonth">
                                         EXPIRY DATE
                                     </label>
-                                    <div >
+                                    <div>
                                         <input asp-for="ExpiredDate" type="text" class="form-control" id="expityMonth" placeholder="MM/YY" required />
                                     </div>
                                 </div>
@@ -123,14 +118,14 @@
                     </div>
                 </div>
                 <ul class="nav nav-pills nav-stacked">
-                    <li class="active">
-                        <a href="#">
-                            <span class="badge pull-right">
-                                <span class="glyphicon glyphicon-usd">@TempData["Amount"]</span>
-                            </span> Final Payment is
-                        </a>
-
-                    </li>
+                    Final Payment is @if (Context.Session.GetInt32("loggedIn") != 1)
+                                    {
+                                        @TempData["Amount"]
+                                    }
+                                    else
+                                    {
+                                        @Context.Session.GetString("Amount");
+                                    }
                 </ul>
                 <br />
                 <input type="submit" value='Submit' class="btn btn-success btn-lg btn-block" />
