Added HomePage and updated policy recommendation page

--- a/HealthInsurenceSystem/HealthInsurenceSystem/Views/Policies/Index.cshtml
+++ b/HealthInsurenceSystem/HealthInsurenceSystem/Views/Policies/Index.cshtml
@@ -41,7 +41,7 @@
                     <th>
                         Duration
                     </th>
-                    <th></th>
+                    <th> More Info</th>
                 </tr>
             </thead>
             <tbody>
@@ -53,7 +53,8 @@
                     <td width="50%">@obj.MaxAge</td>
                     <td width="50%">@obj.MonthPremium</td>
                     <td width="50%">@obj.Duration</td>
-                    <td></td>
+                    <td width="50%">+Know More</td>
+                    
                 </tr>
 
 
