--- a/HealthInsurenceSystem/HealthInsurenceSystem/Views/Policies/addtocart.cshtml
+++ b/HealthInsurenceSystem/HealthInsurenceSystem/Views/Policies/addtocart.cshtml
@@ -41,7 +41,7 @@
                     <div class="col-8 offset-4 row">
 
                         <div class="col">
-                            <input type="submit" class="btn btn-info w-100" value="Pay Online" />
+                           <a asp-action="payonline" class="btn btn-info w-100">Pay Online </a>
                         </div>
                         <div class="col">
                             <a asp-action="Index" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i> Back</a>
