--- a/HealthInsurenceSystem/Views/Person/login.cshtml
+++ b/HealthInsurenceSystem/Views/Person/login.cshtml
@@ -23,8 +23,8 @@
                     <div class="col-4">
                         <label asp-for="Password">Password</label>
                     </div>
-                    <div class="col-8">
-                        <input asp-for="Password" class="form-control" />
+                    <div class="col-8" >
+                        <input asp-for="Password" type="password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
 
