--- a/HealthInsurenceSystem/Views/Person/login.cshtml
+++ b/HealthInsurenceSystem/Views/Person/login.cshtml
@@ -1,11 +1,13 @@
 ﻿@model HealthInsurenceSystem.Models.Person
 
 <form method="post" asp-action="login">
+
     <div class="border p-3">
         @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
         <div class="form-group row">
             <h2 class="text-info pl-3">Log In</h2>
         </div>
+
         <div class="row">
             <div class="col-8">
                 <div class="form-group row">
@@ -18,12 +20,12 @@
                     </div>
 
                 </div>
-                
+
                 <div class="form-group row">
                     <div class="col-4">
                         <label asp-for="Password">Password</label>
                     </div>
-                    <div class="col-8" >
+                    <div class="col-8">
                         <input asp-for="Password" type="password" class="form-control" />
                         <span asp-validation-for="Password" class="text-danger"></span>
                     </div>
@@ -38,6 +40,13 @@
                         <div class="col">
                             <a asp-action="signup" class="btn btn-success w-100"><i class="fas fa-sign-out-alt"></i> Sign Up</a>
                         </div>
+                    </div>
+                </div>
+
+                <div class="row">
+
+                    <div class="col-8 offset-4 row">
+                        <a asp-action="forgetpassword" class="">Forget password</a>
                     </div>
                 </div>
             </div>
